--- a/pages/Company/about.html
+++ b/pages/Company/about.html
@@ -5,11 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us | Wellins Corporation</title>
 
-   <!-- Styles -->
+  <!-- Styles -->
   <link rel="stylesheet" href="../../css/navbar.css">
   <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="../../css/footer.css">
-
 
   <!-- JS Includes -->
   <script src="../../js/include.js" defer></script>
@@ -32,12 +31,18 @@
   <main class="content">
     <section class="about-intro container">
       <h2>Our Story</h2>
-      <p>Founded with a commitment to excellence, Wellins Corporation has become an industry leader in the design and construction of complex mechanical and fire protection systems. From our early beginnings to nationwide operations, our mission has always been clear — deliver safe, reliable, and efficient engineering solutions.</p>
+      <p>Founded with a commitment to excellence, Wellins Corporation is an industry leader in the design and construction of complex mechanical and fire protection systems. From our beginnings to nationwide operations, our mission remains clear — deliver safe, reliable, and efficient engineering solutions.</p>
+
+      <div class="about-gallery">
+        <img src="../../assets/downloads/About1.jpg" alt="Wellins facility" />
+        <img src="../../assets/downloads/About2.jpg" alt="Engineering and fabrication" />
+        <img src="../../assets/downloads/About3.jpeg" alt="Team collaboration" />
+      </div>
     </section>
 
     <section class="mission container">
       <h2>Our Mission</h2>
-      <p>To engineer solutions that protect lives and assets, while advancing technology and sustainability within the industrial sector.</p>
+      <p>Engineer solutions that protect lives and assets while advancing technology and sustainability across the industrial sector.</p>
     </section>
 
     <section class="values container">
@@ -49,12 +54,40 @@
         </div>
         <div class="card">
           <h3>Safety</h3>
-          <p>Safety isn’t a goal—it’s our foundation. Every design and installation is performed with the highest safety standards in mind.</p>
+          <p>Safety isn’t a goal — it’s our foundation. Every design and installation meets the highest safety standards.</p>
         </div>
         <div class="card">
           <h3>Innovation</h3>
           <p>Our engineers continuously seek smarter, more efficient ways to deliver exceptional results to clients.</p>
         </div>
+      </div>
+    </section>
+
+    <section class="clients container">
+      <h2>Trusted By</h2>
+      <p class="lead">We proudly serve leading manufacturers, energy providers, and technology companies.</p>
+      <div class="logo-grid">
+        <img src="../../assets/logos/logo-samsung.png" alt="Samsung" />
+        <img src="../../assets/logos/logo-lgensol.png" alt="LG Energy Solution" />
+        <img src="../../assets/logos/logo-hyundai.png" alt="Hyundai" />
+        <img src="../../assets/logos/logo-skbattery.png" alt="SK Battery" />
+        <img src="../../assets/logos/logo-ultiumcells.png" alt="Ultium Cells" />
+        <img src="../../assets/logos/logo-ingersoll.png" alt="Ingersoll" />
+        <img src="../../assets/logos/logo-hyosung.png" alt="Hyosung" />
+        <img src="../../assets/logos/logo-kumho.png" alt="Kumho" />
+      </div>
+    </section>
+
+    <section class="certifications container">
+      <h2>Certifications</h2>
+      <p class="lead">Our work meets rigorous industry standards and regulatory requirements.</p>
+      <div class="cert-grid">
+        <img src="../../assets/certificates/cert1.png" alt="Certificate 1" />
+        <img src="../../assets/certificates/cert2.png" alt="Certificate 2" />
+        <img src="../../assets/certificates/cert3.png" alt="Certificate 3" />
+        <img src="../../assets/certificates/cert4.png" alt="Certificate 4" />
+        <img src="../../assets/certificates/cert5.png" alt="Certificate 5" />
+        <img src="../../assets/certificates/cert6.png" alt="Certificate 6" />
       </div>
     </section>
 
