--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Wellins Corporation | Home</title>
+  <title>WELLINS INC. | V2</title>
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/style.css" />
@@ -23,7 +23,7 @@
   <!-- HERO SECTION -->
   <section class="hero">
     <div class="hero-content">
-      <span class="eyebrow">Wellins Corporation</span>
+      <span class="eyebrow">Wellins Inc</span>
       <h1>Engineering Safety. Building Excellence.</h1>
       <p>Wellins Corporation delivers reliable fire protection systems, vessel fabrication, and industrial piping solutions nationwide.</p>
       <div class="hero-actions">
