--- a/pages/Company/about.html
+++ b/pages/Company/about.html
@@ -22,7 +22,7 @@
   <!-- PAGE HEADER -->
   <section class="page-banner about-banner">
     <div class="container">
-      <h1>About Wellins Corporation</h1>
+      <h1>Banner</h1>
       <p>Engineering safety and innovation for over 30 years.</p>
     </div>
   </section>
